# GEANT4

./: 00_Geant4_15_10.ipynb  00_HGCAL_Layer.ipynb  01_HGCAL_Layer.ipynb  02_HGCAL_Layer.ipynb  03_HGCAL_Layer.ipynb  HGCAL_Cells.ipynb  HGCAL_Layer_Prototype_01.ipynb  HGCAL_hexa.ipynb  README.md
00_HGCAL/: construction.cc  readme.md
Analysis/Part1/: analyze_cellwise_data.C  analyze_edep_vs_eta.C
Data/: HGCAL_Data.xlsx  HGCAL_Layers_composition.csv  andi.txt  construction.cc  construction_00.cc
HGCAL/: README.md
HGCAL/Codes/: README.md
HGCAL/Pileup_Simulation/: TrackingAction.cc  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc
HGCAL/Single_Particle_Simulation/: TrackingAction.cc  TrackingAction.hh  construction.cc  detector.cc  detector.hh  generator.cc  run.cc
HGCAL_Analysis/: 00_Geant4_15_10.ipynb
HGCAL_Analysis/Part1/: analyze_hits_per_layer.C  cellwise_segmentation.C  fit_landau_distributions.C  layerwise_landau_fit.C
HGCAL_Final/: README.md  readme.md
HGCAL_Final/Codes/: README.md
HGCAL_Final/Pileup_Simulation/: action.hh  construction.cc  detector.cc  generator.hh  readme.md  run.cc  sim.cc
HGCAL_Final/Single_Particle_Simulation/: construction.cc  (+4 more)
HGCAL_realistic/: CMakeLists.txt  TrackInformation.hh  run.cc  sim.cc
HGCAL_realistic/muon/data/: plot_layer_total_energy.C
Prototype_Python/: 00_HGCAL_Layer.ipynb  01_HGCAL_Layer.ipynb  02_HGCAL_Layer.ipynb  03_HGCAL_Layer.ipynb  HGCAL_hexa.ipynb
Python_Prototype/: HGCAL_Cells.ipynb
toy/: action.hh  generator.cc
toy_geometry/: construction.cc  generator.cc  sim.cc
(+73 files in other folders)
